@@ -14,7 +14,10 @@ class XM_XPATH_CONFIGURATION
 
 inherit
 
-	ANY
+	UC_SHARED_STRING_EQUALITY_TESTER
+
+	XM_XPATH_STANDARD_NAMESPACES
+		export {NONE} all end
 
 	MA_SHARED_DECIMAL_CONTEXT
 		export {NONE} all end
@@ -29,20 +32,41 @@ create
 feature {NONE} -- Initialization
 
 	make_configuration is
-			-- Establish invariant.
+			-- Initialize `Current' with standard settings.
+		local
+			l_property_table: DS_HASH_TABLE [STRING, STRING]
 		do
-			create {XM_XPATH_DEFAULT_COLLECTION_RESOLVER} collection_resolver.make
 			product_name := "Gexslt"
+			create system_properties.make_with_equality_testers (3, Void, string_equality_tester)
+			create l_property_table.make_with_equality_testers (3, string_equality_tester, string_equality_tester)
+			register_property_namespace_table (l_property_table, Gexslt_eiffel_type_uri)
+			create {XM_XPATH_DEFAULT_COLLECTION_RESOLVER} collection_resolver.make (Current)
 			shared_decimal_context.set_digits (18)
+		ensure
+			gexslt_properties_table_registered: system_properties.has (Gexslt_eiffel_type_uri)
 		end
 
 feature -- Access
+
+	Standard_file_collection: STRING is "standard-file-collection"
+			-- Property name for standard implementation of file: URI scheme
+
+	Standard_ftp_collection: STRING is "standard-ftp-collection"
+			-- Property name for standard implementation of ftp: URI scheme
+
+	Standard_http_collection: STRING is "standard-http-collection"
+			-- Property name for standard implementation of http: URI scheme
 
 	collection_resolver: XM_XPATH_COLLECTION_RESOLVER
 			-- URI resolver for fn:collection()
 
 	product_name: STRING
 			-- Product name ("Gexslt" or "Gestalt")
+
+	system_properties: DS_HASH_TABLE [DS_HASH_TABLE [STRING, STRING], STRING]
+			-- Tables of additional system properties;
+			-- Key is namespace URI;
+			-- Value is tables of values keyed by local name.
 
 feature -- Status report
 
@@ -69,7 +93,7 @@ feature -- Status report
 			-- To be redefined in XSLT
 		end
 
-feature -- Status setting
+feature -- Setting
 
 	suppress_trace_output (yes_or_no: BOOLEAN) is
 			-- Turn tracing supression on-or-off.
@@ -79,18 +103,18 @@ feature -- Status setting
 			set: is_tracing_suppressed = yes_or_no
 		end
 
-feature -- Element change
-
 	set_collection_resolver (a_collection_resolver: like collection_resolver) is
 			-- Set `collection_resolver'.
+			-- This routine also removes system-properties indicating use of the standard implementation.
 		require
 			collection_resolver_not_void: a_collection_resolver /= Void
 		do
+			clear_resolver_properties
 			collection_resolver := a_collection_resolver
 		ensure
 			collection_resolver_set: collection_resolver = a_collection_resolver
 		end
-
+		
 	set_product_name (a_name: STRING) is
 			-- Set `product_name'.
 		require
@@ -121,9 +145,47 @@ feature -- Element change
 			-- Default is to do nothing - host language should override.
 		end
 
+	register_property_namespace_table (a_table: DS_HASH_TABLE [STRING, STRING]; a_namespace: STRING) is
+			-- Register `a_table' as system-properties in `a_namespace'.
+		require
+			a_table_not_void: a_table /= Void
+			a_namespace_not_void: a_namespace /= Void
+			a_namespace_not_empty: not a_namespace.is_empty
+			new_table: not system_properties.has (a_namespace)
+		do
+			system_properties.force_new (a_table, a_namespace)
+		ensure
+			a_namespace_registered: system_properties.has (a_namespace)
+			table_registered: system_properties.item (a_namespace) = a_table
+		end
+
+feature {NONE} -- Implementation
+
+	clear_resolver_properties is
+			-- Remove all standard resolver system-properties.
+		local
+			l_property_table: DS_HASH_TABLE [STRING, STRING]
+		do
+			l_property_table := system_properties.item (Gexslt_eiffel_type_uri)
+			if l_property_table /= Void then
+				if l_property_table.has (Standard_file_collection) then
+					l_property_table.remove (Standard_file_collection)
+				end
+				if l_property_table.has (Standard_ftp_collection) then
+					l_property_table.remove (Standard_ftp_collection)
+				end
+				if l_property_table.has (Standard_http_collection) then
+					l_property_table.remove (Standard_http_collection)
+				end
+			end
+		end
+
+
 invariant
 
 	collection_resolver_not_void: collection_resolver /= Void
 	product_name_not_void: product_name /= Void
+	system_properties_not_void: system_properties /= Void
+	no_void_namespace: not system_properties.has (Void)
 
 end
